tests/ui/skip_with_other_options.stderr
error: methods are not allowed for skipped fields
 --> $DIR/skip_with_other_options.rs:8:23
  |
8 |     #[structopt(skip, long)]
  |                       ^^^^
